clusters/apps/platform/longhorn/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: longhorn-system
  labels:
    app.kubernetes.io/name: longhorn
    app.kubernetes.io/part-of: fleet
    app.kubernetes.io/managed-by: argocd
  annotations:
    argocd.argoproj.io/sync-wave: '-30'
    argocd.argoproj.io/sync-options: Prune=false
